--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.6.0",
@@ -17,15 +15,6 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "7.4.6",
-    "@storybook/addon-interactions": "7.4.6",
-    "@storybook/addon-links": "7.4.6",
-    "@storybook/addon-onboarding": "1.0.8",
-    "@storybook/addon-styling-webpack": "0.0.5",
-    "@storybook/blocks": "7.4.6",
-    "@storybook/nextjs": "7.4.6",
-    "@storybook/react": "7.4.6",
-    "@storybook/testing-library": "0.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -34,7 +23,6 @@
     "eslint-config-next": "13.5.4",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
-    "storybook": "7.4.6",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
