--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.6.0",
+    "@prisma/client": "^5.5.2",
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "next": "13.5.4",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -24,6 +29,7 @@
     "eslint-config-next": "13.5.4",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
