--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@opentelemetry/api": "^1.6.0",
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
