--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@
 DATABASE_URL="mongodb+srv://kjyook01:9wXwq1QHUqEnI6KI@netflix-clone-coding.7n5tutb.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID=6e5985791b361a174b34
+GITHUB_SECRET=607febae3b194e0bbb6cb0e3189d7394b0ab74db
+
+GOOGLE_CLIENT_ID=371916333675-g22a1p34intoih2s43m9mfb2963f3jnh.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
