--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "prisma": "^5.5.2",
     "tailwindcss": "^3",
     "typescript": "^5"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   }
 }
